// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="sc-bxivhb fiOVKe"
>
  <span
    className="sc-bdVaJa fqDsBO"
  >
    Does this test pass?
  </span>
  <span
    className="sc-bwzfXH fnIExm"
  >
    Select an option
  </span>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="sc-bxivhb eFeFfb"
>
  <span
    className="sc-bdVaJa fqDsBO"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="sc-bxivhb eFeFfb"
>
  <span
    className="sc-bdVaJa fqDsBO"
  >
    Does this test pass?
  </span>
  <span
    className="sc-htpNat hZRmYe"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="sc-bxivhb fiOVKe"
>
  <span
    className="sc-bdVaJa fqDsBO"
  >
    Does this test pass?
  </span>
  <span
    className="sc-bwzfXH fnIExm"
  >
    Select an option
  </span>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX dYaoPs"
    >
      <input
        checked={false}
        className="sc-EHOje cYRqjH"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM jAsCcR"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
